variables are derived from actual config options

--- a/templates/credentials.j2
+++ b/templates/credentials.j2
@@ -1,4 +1,8 @@
+{% if certbot_dns_provider == 'google' %}
+{{ certbot_dns_credentials | to_nice_json }}
+{% else %}
 {{ ansible_managed | comment }}
 {% for k, v in certbot_dns_credentials.items() %}
 {{ k }} = {{ v }}
 {% endfor %}
+{% endif %}
